--- a/firstProgram.html
+++ b/firstProgram.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Lets learn C: firstProgram</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- CSS -->
 
   <!-- Bootstrap Scripts -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Java Script -->
   <script src="js/code.js"></script>
 
 
-
 </head>
 
 <body class="bg scrollbar scrollbar_style">
-  <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
+  <section id="topPage">
+    <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
+  </section>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
@@ -62,8 +64,8 @@
         <div class="para">
           בתוכנית זו נלמד איך מדפיסים למסך <span dir="ltr">hello world</span>: <br>
 
-          include = פעולה שאומרת בעצם איזה ספרייה לכלול בתוך התוכנית (במקרה שלנו את הספרייה הכללית)<br>
-          stdio.h = הספרייה הכללית (נמצאת בכל תוכנית שלנו)<br>
+          include = פעולה שאומרת בעצם איזה ספרייה לכלול בתוך התוכנית (במקרה שלנו את הספרייה הכללית).<br>
+          stdio.h = הספרייה הכללית (נמצאת בכל תוכנית שלנו).<br>
           <span dir="ltr">void main()</span> = התוכנית הראשית שלנו – כל הקוד שירוץ בתוכנית שלנו יתחם על ידי סוגריים
           מסולסלים.<br>
           <span dir="ltr">printf("")</span> = פעולת הדפסה בסיסית – נרשום את מה שאנו רוצים להדפיס בתוך הגרשיים שבתוך
