--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Lets learn C: homePage</title>
+  <title>Lets learn C: HomePage</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- CSS -->
 
   <!-- Bootstrap Scripts -->
@@ -20,11 +20,13 @@
   <!-- Java Script -->
   <script src="js/code.js"></script>
 
+
 </head>
 
-<body class="bg scrollbar scrollbar_style">
-
-  <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
+<body class="bg-oneAndHalf scrollbar scrollbar_style">
+  <section id="topPage">
+    <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
+  </section>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
     <a href="index.html"><span class="colorcheck">מי אנחנו?</span></a>
@@ -54,7 +56,7 @@
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
   <section id="main" onclick="openOrCloseNav(0)">
-    <h1 class="head-left">Let's learn C</h1>
+    <h1 id="title" class="head-left">Let's learn C</h1>
     <h1 class="head-right">ברוכים הבאים לאתר שלנו Let’s learn C</h1>
 
     <h3 class="head-right">קצת עלינו:</h3>
@@ -78,7 +80,8 @@
       <p>
 
         בתור סטודנטים שעברו את שנה א' אנו יודעים כמה מייגעת וקשה היא, כמה מעט חומר בעברית יש על שפת c באתרים חיצוניים
-        ואם כבר יש חומר הוא בד"כ ישן, לא מעודכן, לא מובן ובעיקר לא נוח לקריאה. לכן החלטנו ליצור אתר שמסביר בפשטות (כמה
+        ואם כבר יש חומר הוא בד"כ ישן, לא מעודכן, לא מובן ובעיקר לא נוח לקריאה.<br> לכן, החלטנו ליצור אתר שמסביר בפשטות
+        (כמה
         שאפשר כמובן) ומלא בדוגמאות קוד שניתן להעתיק לתוך סביבת העבודה של הלומד.
 
       </p>
@@ -89,16 +92,16 @@
       <p>
 
         מקווים מאוד שהצלחנו לעזור, מוזמנים ליצור קשר במידה ומצאתם טעות / יש לכם רעיון לשיפור התוכן באתר.
-        <br>   
+        <br>
         <br>
         <a href="mailto:lahavitsme0@gmail.com">לשליחת מייל ללהב</a>
         <br>
-        <a href="mailto:anzortorikashvili@gmail.com">לשליחת מייל לזיו</a>
+        <a href="mailto:ziv.h252@gmail.com">לשליחת מייל לזיו</a>
         <br>
-        <a href="mailto:ziv.h252@gmail.com">לשליחת מייל לאנזור</a>
+        <a href="mailto:anzortorikashvili@gmail.com">לשליחת מייל לאנזור</a>
       </p>
     </div>
-    
+
 
   </section>
 </body>
