--- a/mathOperator.html
+++ b/mathOperator.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Lets learn C: mathOperator</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- CSS -->
 
   <!-- Bootstrap Scripts -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Java Script -->
@@ -24,8 +24,9 @@
 </head>
 
 <body class="bg-oneAndHalf scrollbar scrollbar_style">
-
-  <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
+  <section id="topPage">
+    <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
+  </section>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
@@ -60,12 +61,12 @@
 
     <div class="First-Para">
       <ul>
-        <li> + פעולת חיבור</li>
-        <li> - פעולת חיסור</li>
-        <li> / פעולה חילוק</li>
-        <li> * פעולת כפל</li>
+        <li> + פעולת חיבור.</li>
+        <li> / פעולה חילוק.</li>
+        <li> - פעולת חיסור.</li>
+        <li> * פעולת כפל.</li>
         <li> % מודולו - אופרטור שבעצם אומר לנו מהי שארית החלוקה של מספר במספר אחר.</li>
-        <li> () סוגריים</li>
+        <li> () סוגריים.</li>
         <li> = השמה - זוהי בעצם פעולה שאומרת בתכנות שמה שנמצא בצד שמאל מקבל את הערך שנמצא בצד ימין.</li>
       </ul>
       דוגמה למודולו:
@@ -91,9 +92,9 @@
       ניקח את ה <span class="frac"><sup>0</sup><span>&frasl;</span><sub>4</sub></span> שיש לנו ובעצם שארית החלוקה שלנו
       היא 0.
       <br>
-      באופן כללי כדי לחשב מודולו של מספר אנו נפעל לפי הנוסחא הבאה:
+      באופן כללי כדי לחשב מודולו של מספר אנו נפעל לפי הנוסחא הבאה:<br>
       x - ( ( <span class="frac"><sup>x</sup><span>&frasl;</span><sub>y</sub></span> ) * y)
-      כך ש x הוא המספר ההתחלתי <br>ו y הוא המספר עליו אנחנו רוצים לעשות עליו את המודולו
+      כך ש x הוא המספר ההתחלתי <br>ו y הוא המספר עליו אנחנו רוצים לעשות עליו את המודולו.
     </div>
     <!--Second paragraph-->
     <div class="row">
